overflow issue solved

--- a/css/chatBot.css
+++ b/css/chatBot.css
@@ -159,31 +159,7 @@
     cursor: pointer;
     transition: all 0.5s ease;
 }
-.tooltip{
-    position: fixed;
-    bottom: 10%;
-    right: 5%;
-    /* top:50%;
-    left:100%; */
-    width:200px;
-    /* max-width:400px; */
-    transform:translate(0, -50%);
-    padding:20px;
-    color:#666666;
-    background-color: black;
-    font-weight:normal;
-    font-size:13px;
-    border-radius:8px;
-    /* position:absolute; */
-    z-index:9999;
-    box-sizing:border-box;
-    display:block;
-    border:1px solid #DCA;
-    visibility: visible;
-}
-.tooltip h1{
-    font-size: xx-large;
-}
+
 .chat-bot-icon img {
     height: 90px;
     width: 90px;
